--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "raw-loader": "^4.0.2",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "phaser": "^3.24.1",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack": "^5.10.0",
+    "webpack-merge": "^5.5.0"
   }
 }
