--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test-w": "jest --watch",
-    "build": "webpack --config webpack/prod.js ",
+    "build": "webpack --config webpack/prod.js",
     "start": "webpack serve --config webpack/base.js"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^4.5.0",
     "phaser": "^3.24.1",
     "terser-webpack-plugin": "^5.0.3",
