--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^4.5.0",
     "phaser": "^3.24.1",
+    "phaser3-rex-plugins": "^1.1.31",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.10.0",
     "webpack-merge": "^5.5.0"
