--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.7",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -32,6 +37,7 @@
     "html-webpack-plugin": "^4.5.0",
     "phaser": "^3.24.1",
     "phaser3-rex-plugins": "^1.1.31",
+    "regenerator-runtime": "^0.13.7",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.10.0",
     "webpack-merge": "^5.5.0"
